<resources>
    <string name="app_name">MyFirstCalculate</string>
    <string name="action_settings">Settings</string>
    <string name="Calcladora">Calculadora</string>
    <string name="welcome">mi primera calculadora</string>
    <string name="c_estandar">Calculadora Estandar</string>
    <string name="c_cientifica">Calculadora cientifica</string>
    <string name="c_welcome_d">hola xD xD</string>
    <string name="nada"></string>

    <string name="number_01">1</string>
    <string name="number_02">2</string>
    <string name="number_03">3</string>
    <string name="number_04">4</string>
    <string name="number_05">5</string>
    <string name="number_06">6</string>
    <string name="number_07">7</string>
    <string name="number_08">8</string>
    <string name="number_09">9</string>
    <string name="number_00">0</string>

    <string name="clean_limp">CE</string>
    <string name="Limp_btn">C</string>

    <string name="fact_x">x!</string>
    <string name="potencia_x">^</string>
    <string name="pi_x">π</string>
    <string name="log_x">ln</string>
    <string name="arcTan_x">Tan-1</string>
    <string name="arcCos_x">Cos-1</string>
    <string name="arcSen_x">sen-1</string>
    <string name="seno_x">sin</string>
    <string name="coseno_x">cos</string>
    <string name="tangente_x">tan</string>
    <string name="pocentaje">%</string>
    <string name="dividir">/</string>
    <string name="multiplicar">*</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="punto">.</string>
    <string name="equals">=</string>
    <string name="raiz">√</string>

    <string name="title_activity_imagen_pantalla">imagenPantalla</string>
    <string name="title_activity_cientifica">cientifica</string>
    <string name="title_activity_estandar">estandar</string>
</resources>
