<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.usuario.myfirstcalculate.cientifica"
    tools:showIn="@layout/activity_cientifica">

    <TextView
        android:id="@+id/textView"
        android:layout_width="587dp"
        android:layout_height="22dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:layout_constraintHorizontal_bias="0.666" />
    <EditText
        android:id="@+id/txtDisplay"
        android:layout_width="584dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:background="@color/color_rest"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="35dp" />


    <Button
        android:id="@+id/btnFact"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/fact_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        app:layout_constraintHorizontal_bias="0.067" />

    <Button
        android:id="@+id/btnPot"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/potencia_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        app:layout_constraintHorizontal_bias="0.215" />

    <Button
        android:id="@+id/btnAsin"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/arcSen_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        app:layout_constraintHorizontal_bias="0.067" />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/seno_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:layout_constraintHorizontal_bias="0.067" />

    <Button
        android:id="@+id/btnPi"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/pi_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        app:layout_constraintHorizontal_bias="0.362" />

    <Button
        android:id="@+id/btnAcos"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/arcCos_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        app:layout_constraintHorizontal_bias="0.215" />

    <Button
        android:id="@+id/btnCos"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/coseno_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/log_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        app:layout_constraintHorizontal_bias="0.215" />

    <Button
        android:id="@+id/btnAtan"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/arcTan_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        app:layout_constraintHorizontal_bias="0.362" />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="76dp"
        android:layout_height="43dp"
        android:text="@string/tangente_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:layout_constraintHorizontal_bias="0.215" />


    <Button
        android:id="@+id/btnPunto"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:text="@string/punto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        app:layout_constraintHorizontal_bias="0.652"
        tools:layout_editor_absoluteY="258dp" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="59dp"
        android:layout_height="37dp"
        android:text="@string/sumar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        app:layout_constraintHorizontal_bias="0.748"
        tools:layout_editor_absoluteY="258dp" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="48dp"
        android:layout_height="77dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:layout_constraintHorizontal_bias="0.841" />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="55dp"
        android:layout_height="41dp"
        android:text="@string/restar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802"
        app:layout_constraintHorizontal_bias="0.75"
        tools:layout_editor_absoluteY="217dp" />

    <Button
        android:id="@+id/btnPorcent"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:text="@string/pocentaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintVertical_bias="0.478"
        tools:layout_editor_absoluteY="132dp" />

    <Button
        android:id="@+id/btnRaiz"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:text="@string/raiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632"
        app:layout_constraintHorizontal_bias="0.84"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnNum01"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792"
        app:layout_constraintHorizontal_bias="0.657" />

    <Button
        android:id="@+id/btnNum02"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785"
        app:layout_constraintHorizontal_bias="0.579" />

    <Button
        android:id="@+id/btnNum03"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <Button
        android:id="@+id/btnNum04"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        app:layout_constraintHorizontal_bias="0.655" />

    <Button
        android:id="@+id/btnNum05"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        app:layout_constraintHorizontal_bias="0.579" />

    <Button
        android:id="@+id/btnNum06"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/btnNum07"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <Button
        android:id="@+id/btnNum08"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        app:layout_constraintHorizontal_bias="0.579" />

    <Button
        android:id="@+id/btnNum09"
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:text="@string/number_09"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        app:layout_constraintHorizontal_bias="0.655" />

    <Button
        android:id="@+id/btnNum00"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:text="@string/number_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        app:layout_constraintHorizontal_bias="0.542" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:text="@string/multiplicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658"
        app:layout_constraintHorizontal_bias="0.75" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:text="@string/dividir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.75" />

    <Button
        android:id="@+id/btnClean"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:text="@string/clean_limp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        app:layout_constraintHorizontal_bias="0.751" />

    <Button
        android:id="@+id/btnLimp"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:text="@string/Limp_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:layout_constraintHorizontal_bias="0.838"
        tools:layout_editor_absoluteY="90dp" />


</android.support.constraint.ConstraintLayout>
