<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.usuario.myfirstcalculate.estandar"
    tools:showIn="@layout/activity_estandar">

    <TextView
        android:id="@+id/txtView2"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/nada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/txtDist"
        android:layout_width="368dp"
        android:layout_height="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteY="28dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintVertical_bias="0.612"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintVertical_bias="0.612"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintVertical_bias="0.612"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintVertical_bias="0.44"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintVertical_bias="0.44"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintVertical_bias="0.44"/>

    <Button
        android:id="@+id/btn7"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintVertical_bias="0.268"/>

    <Button
        android:id="@+id/btn8"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintVertical_bias="0.268"/>

    <Button
        android:id="@+id/btn9"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/number_09"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintVertical_bias="0.268"/>

    <Button
        android:id="@+id/btn0"
        android:layout_width="179dp"
        android:layout_height="72dp"
        android:text="@string/number_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintVertical_bias="0.784"/>

    <Button
        android:id="@+id/btnP"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/punto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintVertical_bias="0.784"/>

    <Button
        android:id="@+id/btnS"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/sumar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintVertical_bias="0.612"/>

    <Button
        android:id="@+id/btnR"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/restar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintVertical_bias="0.784"/>

    <Button
        android:id="@+id/btnM"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/multiplicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintVertical_bias="0.44"/>

    <Button
        android:id="@+id/btnD"
        android:layout_width="87dp"
        android:layout_height="75dp"
        android:text="@string/dividir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintVertical_bias="0.268"/>

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.906"
        tools:layout_editor_absoluteY="417dp" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="91dp"
        android:layout_height="53dp"
        android:text="@string/clean_limp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.908"/>
</android.support.constraint.ConstraintLayout>
